--- a/index.html
+++ b/index.html
@@ -2,41 +2,64 @@
 <html lang="en">
 <head>
 
-    <title> Home </title>
+    <title>Search</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/fbab0443d7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <center>
-        <a href="index.html">
-            <p id="Home"> <i class="fa-solid fa-house fa-2xl"></i> </p>
-         </a>
-<br>
-<br>
-<br>
-    <a href="Clock.html">
-       <p id="clock"> <i class="fa-regular fa-clock fa-2xl"></i> </p>
-    </a>
-<br>
-<br>
-<br>
-<a href="Gamble.html">
-   <p id="dice-roller"> <i class="fa-solid fa-dice"></i> </p>
-</a>
-<br>
-<br>
-<br>
-<a href="games.html">
-   <p id="games"> <i class="fa-solid fa-gamepad fa-2xl"></i> <p>
-</a>
-<br>
-<a href="search.html">
-    <p id="Search"> <i class="fa-solid fa-magnifying-glass fa-2xl"></i> </p>
- </a>
-<br>
-<h1 id="myH1"> Home </h1>
 
-    <script src="index.js"></script>
-</center> 
+<h1 id="myH1"> Look In It </h1>
+
+<div class="search-container">
+    <input type="text" id="searchInput" placeholder="Look In It By URL...">
+    <button id="searchButton">Search</button>
+<div id="searchResults"></div>
+
+    <script src="script.js"></script>
+</center>
+<br>
+<br>
+<a href="https://www.youtube.com/">
+    <i class="fa-brands fa-youtube fa-rotate-by fa-xl" id="Youtube" style="color:#595353; --fa-rotate-angle: 1deg;""></i>
+</a>
+
+
+<a href="https://discord.com/">
+<i class="fa-brands fa-discord fa-xl" id="Discord"></i>
+</a>
+
+<a href="https://mail.google.com/mail/u/0/">
+    <i class="fa-solid fa-envelope fa-xl" id="Gmail"></i>
+</a>
+
+<a href="https://chat.openai.com/">
+    <i class="fa-solid fa-robot fa-xl" id="Chatgpt"></i>
+</a>
+
+<a href="games.html">
+<i class="fa-solid fa-gamepad fa-xl" id="Games"></i>
+</a>
+
+<a href="https://docs.google.com/">
+    <i class="fa-solid fa-pencil fa-xl" id="Googledocs"></i>
+</a>
+
+<a href="https://sites.google.com/">
+    <i class="fa-solid fa-computer fa-xl" id="Googlesites"></i>
+</a>
+
+<a href="https://samueli.echo-ntn.org/">
+    <i class="fa-solid fa-graduation-cap fa-xl" id="Echo"></i>
+</a> 
+
+<a href="https://www.ixl.com/signin">
+    <i class="fa-solid fa-plus fa-xl" id="IXL"></i>
+</a>
+
+<a href="https://classroom.google.com">
+    <i class="fa-solid fa-school fa-xl" id="Googleclassroom"></i>
+</a>
+
 </body>
 </html>
