--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <i class="fa-solid fa-robot fa-xl" id="Chatgpt"></i>
 </a>
 
-<a href="games.html">
-<i class="fa-solid fa-gamepad fa-xl" id="Games"></i>
+<a href="https://www.google.com/">
+    <i class="fa-brands fa-google fa-xl" id="Google"></i>
 </a>
 
 <a href="https://docs.google.com/">
