--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 
-    <title>Search</title>
+    <title>Look In It</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/fbab0443d7.js" crossorigin="anonymous"></script>
 </head>
