--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
     <script src="https://kit.fontawesome.com/fbab0443d7.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <center>
+<center>
 
 <h1 id="myH1"> Look In It </h1>
 
 <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Look In It By URL...">
+    <input type="text" id="searchInput" placeholder="Look In It Unblock Tool...">
     <button id="searchButton">Search</button>
 <div id="searchResults"></div>
 
+
+<div id="searchContainer2">
+    <input type="text" id="searchInput2" placeholder="Look In It Search...">
+    <button id="searchButton2">Search</button>
+</div>
+
+
     <script src="script.js"></script>
+    <script src="index.js"></script>
 </center>
 <br>
 <br>
