--- a/results.html
+++ b/results.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <center>
     <div id="searchResults"></div>
 
     <script>
@@ -54,5 +55,6 @@ fetch('ranked_domains.json') // Update the file name here
     });
 
     </script>
+    </center>
 </body>
 </html>
