--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1 id="myH1"> Look In It </h1>
 
 <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Look In It Unblock Tool...">
+    <input type="text" id="searchInput" placeholder="Look In It URL Tool...">
     <button id="searchButton">Search</button>
 <div id="searchResults"></div>
 <div id="searchContainer2">
