--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1 id="myH1"> Look In It </h1>
 
 <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Look In It Unblock Tool...">
+    <input type="text" id="searchInput" placeholder="Look In It Iframe Tool...">
     <button id="searchButton">Search</button>
 <div id="searchResults"></div>
 
@@ -26,7 +26,6 @@
 
     <script src="script.js"></script>
     <script src="index.js"></script>
-</center>
 <br>
 <br>
 <a href="https://www.youtube.com/">
@@ -69,8 +68,21 @@
 <a href="https://classroom.google.com">
     <i class="fa-solid fa-school fa-xl" id="Googleclassroom"></i>
 </a>
-
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSewVWOZqtwZjtIrvwMDDbL_RZk-3Mk8mX5-LAmjYy4r_pNfaQ/viewform?embedded=true" width="640" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+<br>
+<br>
+<h4>Scroll Down For API Request Form</h4>
+<br>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSewVWOZqtwZjtIrvwMDDbL_RZk-3Mk8mX5-LAmjYy4r_pNfaQ/viewform?embedded=true" width="640" height="760" frameborder="0" marginheight="0" marginwidth="0">API Request Form</iframe>
+<br>
+<a href="https://github.com/CoolDev09/project/blob/main">
+<button id="Github-credit">Github Project</button>
+</a>
+<a href="instructions.html">
+    <button id="Instructions">How To Look In It</button>
+</a>
+<a href="changelog.html">
+    <button id="Change-log">Change Log</button>
+</a>
+</center>
 </body>
 </html>
