--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSewVWOZqtwZjtIrvwMDDbL_RZk-3Mk8mX5-LAmjYy4r_pNfaQ/viewform?embedded=true" width="640" height="760" frameborder="0" marginheight="0" marginwidth="0">API Request Form</iframe>
 <br>
 <a href="https://github.com/CoolDev09/project/blob/main">
-<button id="Github-credit">Github Project</button>
+<button id="Git">Github Project</button>
 </a>
 <a href="instructions.html">
-    <button id="Instructions">How To Look In It</button>
+    <button id="Ins">How To Look In It</button>
 </a>
 <a href="changelog.html">
-    <button id="Change-log">Change Log</button>
+    <button id="Clog">Change Log</button>
 </a>
 </center>
 </body>
