--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSewVWOZqtwZjtIrvwMDDbL_RZk-3Mk8mX5-LAmjYy4r_pNfaQ/viewform?embedded=true" width="640" height="760" frameborder="0" marginheight="0" marginwidth="0">API Request Form</iframe>
 <br>
 <a href="https://github.com/CoolDev09/project/blob/main">
-<button id="Git">Github Project</button>
+<button id="Github-credit" style="background-color: #545454; color: #747474; height: 35px; width: 100px; border: none; border-radius: 15px; cursor: pointer;">Github Project</button>
 </a>
 <a href="instructions.html">
-    <button id="Ins">How To Look In It</button>
+    <button id="Instructions" style="background-color: #545454; color: #747474; height: 35px; width: 150px; border: none; border-radius: 15px; cursor: pointer;">How To Look In It</button>
 </a>
 <a href="changelog.html">
-    <button id="Clog">Change Log</button>
+    <button id="Change-log" style="background-color: #545454; color: #747474; height: 35px; width: 100px; border: none; border-radius: 15px; cursor: pointer;">Change Log</button>
 </a>
 </center>
 </body>
