--- a/changelog.html
+++ b/changelog.html
@@ -9,15 +9,9 @@
 </head>
 <body>
     <center>
-    <h1>Update 1.0!</h1>
+    <h1>Update 1.1!</h1>
     <p> 
-Change 1- Added 2nd Search Bar For Search Engine Usage
-<br>
-Change 2- Added The Change Log
-<br>
-Change 3- Added API Request Form
-<br>
-Change 4- Added Credits/Instructions
+I updated search bar two with a 150,000 domain api
     </p>
 </center>
 </body>
