--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <div class="search-container">
     <input type="text" id="searchInput" placeholder="Look In It Iframe Tool...">
     <button id="searchButton">Search</button>
-<div id="searchResults"></div>
+<div></div>
 
 
-<div id="searchContainer2">
-    <input type="text" id="searchInput2" placeholder="Look In It Search...">
-    <button id="searchButton2">Search</button>
-</div>
+    <div id="searchContainer2">
+        <input type="text" id="searchInput2" placeholder="Look In It..">
+        <button id="searchButton2">Search</button>
+    </div>
 
-
+    
     <script src="script.js"></script>
     <script src="index.js"></script>
 <br>
