--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="search-container">
     <input type="text" id="searchInput" placeholder="Look In It Iframe Tool...">
-<div></div>
+</div>
 
 
     <div id="searchContainer2">
