--- a/changelog.html
+++ b/changelog.html
@@ -11,13 +11,7 @@
     <center>
     <h1>Update 1.0!</h1>
     <p> 
-Change 1- Added 2nd Search Bar For Search Engine Usage
-<br>
-Change 2- Added The Change Log
-<br>
-Change 3- Added API Request Form
-<br>
-Change 4- Added Credits/Instructions
+Updated search bar 2 API to include 150,000 more domains
     </p>
 </center>
 </body>
