--- a/changelog.html
+++ b/changelog.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <center>
-    <h1>Update 1.0!</h1>
+    <h1>Update 1.1</h1>
     <p> 
 Updated search bar 2 API to include 150,000 more domains
     </p>
