--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <div id="searchContainer2">
-        <input type="text" id="searchInput2" placeholder="Look In It..">
+        <input type="text" id="searchInput2" placeholder="Look In It...">
     </div>
 
     
